# galacto

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: ci-cd.yml  diagrams.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  VIDEO_PRODUCTION.md
docs/diagrams/: README.md  frame-loop.dot  gpu-buffers.dot  system-overview.dot
scripts/: add-video-captions.mjs  assemble-dist.mjs  cache-bust.mjs  capture-canvas-video.mjs  capture-still.mjs  check-deploy-metadata.mjs  check-diagrams.mjs  check-js.mjs  cli.mjs  gen-icons.mjs  preflight.mjs  produce.mjs  pwa-update.test.mjs  serve-static.mjs  smoke.mjs  verify-build.mjs
src/: arrangement.rs  audio.rs  camera.rs  error.rs  graphics.rs  input.rs  lib.rs  mastering.rs  music.rs  postprocess.rs  scenarios.rs  simulation.rs  units.rs  utils.rs
src/shaders/: halo.wgsl  post.wgsl  render.wgsl  update.wgsl
static/: 404.html  _headers  _worker.js  app.js  article.css  audio.html  engineering.html  index.html  manifest.json  physics.html  pwa-update.mjs  robots.txt  sentry-config.js  sentry-sdk.js  sentry.js  site.webmanifest  sitemap.xml  styles.css  sw.js
static/10.57.0/: feedback-modal.min.js  feedback-screenshot.min.js
tests/: shaders.rs
