[package]
name = "galacto"
version = "0.1.0"
edition = "2021"
authors = ["Robert Gilks <rob.gilks@gmail.com>"]
description = "A GPU-accelerated black hole accretion disk simulation in Rust with WebGPU"
license = "MIT"
repository = "https://github.com/tre-systems/galacto"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = { version = "24.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "console",
    "CssStyleDeclaration",
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
cgmath = "0.18"
bytemuck = { version = "1.0", features = ["derive"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
raw-window-handle = "0.6"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
raw-window-handle = { version = "0.6", features = ["wasm-bindgen-0-2"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
