[package]
name = "galacto"
version = "0.1.0"
edition = "2021"
authors = ["Multivibrator"]
description = "A GPU-accelerated self-gravitating N-body galaxy sandbox in Rust, WebAssembly, and WebGPU"
license = "AGPL-3.0-only"
repository = "https://github.com/tre-systems/galacto"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O2']

# cdylib for the wasm-pack build; rlib so the crate links as a normal library
# for native `cargo test` (camera math, scenario seeding, buffer-layout checks).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "29.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "HtmlElement",
    "Event",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "console",
    "CssStyleDeclaration",
    # Web Audio: the generative soundscape (src/audio.rs). All synthesized — no
    # sample files — so only oscillator/filter/effect nodes are needed.
    "AudioContext",
    "AudioContextState",
    "BaseAudioContext",
    "OfflineAudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "GainNode",
    "OscillatorNode",
    "OscillatorType",
    "BiquadFilterNode",
    "BiquadFilterType",
    "ConvolverNode",
    "DelayNode",
    "DynamicsCompressorNode",
    "StereoPannerNode",
    "WaveShaperNode",
    "OverSampleType",
] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
cgmath = "0.18"
bytemuck = { version = "1.0", features = ["derive"] }
# Only a fixed-seed StdRng is used (no OS entropy), so the default thread_rng /
# os_rng features stay off. getrandom then drops out of the compiled dependency
# graph, so there is no wasm entropy backend to configure.
rand = { version = "0.10", default-features = false, features = ["std", "std_rng"] }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
